# 3dprinter-error-detection

./: README.md  pyproject.toml
gcode_injection/: inject.py
model/: benchmark.py  client_interface.py  create_split_file.py  dataloader.py  eval.py  eval_delay.py  eval_visual.py  grid_imgs.py  network.py  server_interface.py  test_crop.py  train.py  utils.py
sample_images/ender_91/: _center.json  _meta.json  _shift.json
